# eleven

./: .env.example  .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
anchor/: Anchor.toml  Cargo.toml
anchor/crates/txline-settlement/: Cargo.toml
anchor/crates/txline-settlement/src/: lib.rs
anchor/idl/: eleven.json
anchor/programs/eleven/: Cargo.toml
anchor/programs/eleven/src/: constants.rs  error.rs  instructions.rs  lib.rs  merkle.rs  state.rs
anchor/programs/eleven/src/instructions/: advance_phase.rs  commit_live_root.rs  commit_prediction.rs  create_pool.rs  create_room.rs  join_room.rs  refund.rs  resolve_market.rs  reveal_live_pick.rs  reveal_prediction.rs  settle_pool.rs  settle_room.rs
anchor/programs/eleven/tests/: test_room.rs  test_settle_pool.rs
anchor/programs/mock-txoracle/: Cargo.toml
anchor/programs/mock-txoracle/src/: lib.rs
apps/keeper/: README.md  keeper.config.example.json  keeper.config.sim.json  package-lock.json  package.json
apps/keeper/idl/: eleven.json
apps/keeper/scripts/: probe-oracle.ts  probe-real-validate.ts  seed-room-4p.ts  seed-room.ts  verify-4p.ts  verify.ts
apps/keeper/src/: index.ts  keeper.ts  logger.ts  proof.ts  state.ts  stream.ts  submitter.ts  types.ts  watcher.ts
apps/keeper/test/: keeper.test.ts
docs/: DEMO.md  PLAYBOOK.md  devnet-e2e.md  txline-notes.md
scripts/: ix-sanity.mjs  live-join-e2e.mjs  txline-probe.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/demo/airdrop/: route.ts
src/app/api/txline/fixtures/: route.ts
src/app/api/txline/stream/: route.ts
src/app/match/[id]/: MatchRoom.tsx  page.tsx
src/components/: Brand.tsx  MatchCard.tsx  RoomCard.tsx  WalletChip.tsx
src/components/room/: BetSlip.tsx  EventTicker.tsx  LiveBets.tsx  MarketRow.tsx  ModeToggle.tsx  PoolPanel.tsx  PredictionCard.tsx  PredictionSlip.tsx  ReceiptCard.tsx  ScoreHeader.tsx  StatsBar.tsx  WinnerBanner.tsx
src/lib/chain/: config.ts  eleven.idl.json  rooms.ts  useOnchainRoom.ts
src/lib/eleven/: baseline.test.ts  core.test.ts  core.ts  index.ts  marketGenerator.test.ts  marketGenerator.ts  round.test.ts
src/lib/feed/: index.ts  simulated.ts  txline.ts  types.ts
src/lib/room/: bots.ts  useLiveMarkets.ts  useMatchRoom.ts  useRoom.ts
src/lib/txline/: index.ts  mockProof.ts  receipt.ts  settlement.ts
src/lib/wallet/: useWallet.tsx
