[package]
name = "txline-settlement"
version = "0.1.0"
description = "Reusable TxLINE (TxOracle) on-chain settlement primitive: validate_stat proof-arg schema + CPI helper. Drop into any Anchor market to settle from TxLINE Merkle proofs."
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["lib"]
name = "txline_settlement"

[features]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "1.1.1"
