[package]
name = "eleven"
version = "0.1.0"
description = "ELEVEN — trustless live-football micro-prediction markets, settled by TxLINE."
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "eleven"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "txline-settlement/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "1.1.1"
txline-settlement = { path = "../../crates/txline-settlement" }
solana-sha256-hasher = "3.1.0"

[dev-dependencies]
litesvm = "0.10.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"
solana-instruction = "3.0.0"
solana-pubkey = "3.0.0"
solana-clock = "3.0.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
