[package]
name = "mock-txoracle"
version = "0.1.0"
description = "Test-only stand-in for the TxLINE TxOracle program. Implements a validate_stat that accepts iff a proof was supplied, so eleven's settlement CPI can be tested deterministically in litesvm."
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_txoracle"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "txline-settlement/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = "1.1.1"
txline-settlement = { path = "../../crates/txline-settlement" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
